@@ -1,4 +1,4 @@
-/* $Id $ */
+/* $Id: gamesave.c,v 1.20 2003-06-07 20:51:13 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -16,6 +16,269 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
  *
  * Save game information
  *
+ * Old Log:
+ * Revision 1.3  1996/02/21  13:59:17  allender
+ * check Data folder when can't open a level file from a hog
+ *
+ * Revision 1.2  1995/10/31  10:23:23  allender
+ * shareware stuff
+ *
+ * Revision 1.1  1995/05/16  15:25:37  allender
+ * Initial revision
+ *
+ * Revision 2.2  1995/04/23  14:53:12  john
+ * Made some mine structures read in with no structure packing problems.
+ *
+ * Revision 2.1  1995/03/20  18:15:43  john
+ * Added code to not store the normals in the segment structure.
+ *
+ * Revision 2.0  1995/02/27  11:29:50  john
+ * New version 2.0, which has no anonymous unions, builds with
+ * Watcom 10.0, and doesn't require parsing BITMAPS.TBL.
+ *
+ * Revision 1.207  1995/02/23  10:17:36  allender
+ * fixed parameter mismatch with compute_segment_center
+ *
+ * Revision 1.206  1995/02/22  14:51:17  allender
+ * fixed some things that I missed
+ *
+ * Revision 1.205  1995/02/22  13:31:38  allender
+ * remove anonymous unions from object structure
+ *
+ * Revision 1.204  1995/02/01  20:58:08  john
+ * Made editor check hog.
+ *
+ * Revision 1.203  1995/01/28  17:40:34  mike
+ * correct level names (use rdl, sdl) for dumpmine stuff.
+ *
+ * Revision 1.202  1995/01/25  20:03:46  matt
+ * Moved matrix check to avoid orthogonalizing an uninitialize matrix
+ *
+ * Revision 1.201  1995/01/20  16:56:53  mike
+ * remove some mprintfs.
+ *
+ * Revision 1.200  1995/01/15  19:42:13  matt
+ * Ripped out hostage faces for registered version
+ *
+ * Revision 1.199  1995/01/05  16:59:09  yuan
+ * Make it so if editor is loaded, don't get error from typo
+ * in filename.
+ *
+ * Revision 1.198  1994/12/19  12:49:46  mike
+ * Change fgets to cfgets.  fgets was getting a pointer mismatch warning.
+ *
+ * Revision 1.197  1994/12/12  01:20:03  matt
+ * Took out object size hack for green claw guys
+ *
+ * Revision 1.196  1994/12/11  13:19:37  matt
+ * Restored calls to fix_object_segs() when debugging is turned off, since
+ * it's not a big routine, and could fix some possibly bad problems.
+ *
+ * Revision 1.195  1994/12/10  16:17:24  mike
+ * fix editor bug that was converting transparent walls into rock.
+ *
+ * Revision 1.194  1994/12/09  14:59:27  matt
+ * Added system to attach a fireball to another object for rendering purposes,
+ * so the fireball always renders on top of (after) the object.
+ *
+ * Revision 1.193  1994/12/08  17:19:02  yuan
+ * Cfiling stuff.
+ *
+ * Revision 1.192  1994/12/02  20:01:05  matt
+ * Always give vulcan cannon powerup same amount of ammo, regardless of
+ * how much it was saved with
+ *
+ * Revision 1.191  1994/11/30  17:45:57  yuan
+ * Saving files now creates RDL/SDLs instead of CDLs.
+ *
+ * Revision 1.190  1994/11/30  17:22:14  matt
+ * Ripped out hostage faces in shareware version
+ *
+ * Revision 1.189  1994/11/28  00:09:30  allender
+ * commented out call to newdemo_record_start_demo in load_level...what is
+ * this doing here anyway?????
+ *
+ * Revision 1.188  1994/11/27  23:13:48  matt
+ * Made changes for new mprintf calling convention
+ *
+ * Revision 1.187  1994/11/27  18:06:20  matt
+ * Cleaned up LVL/CDL file loading
+ *
+ * Revision 1.186  1994/11/25  22:46:29  matt
+ * Allow ESC out of compiled/normal menu (esc=compiled).
+ *
+ * Revision 1.185  1994/11/23  12:18:35  mike
+ * move level names here...a more logical place than dumpmine.
+ *
+ * Revision 1.184  1994/11/21  20:29:19  matt
+ * If hostage info is bad, fix it.
+ *
+ * Revision 1.183  1994/11/21  20:26:07  matt
+ * Fixed bug, I hope
+ *
+ * Revision 1.182  1994/11/21  20:20:37  matt
+ * Fixed stupid mistake
+ *
+ * Revision 1.181  1994/11/21  20:18:40  matt
+ * Fixed (hopefully) totally bogus writing of hostage data
+ *
+ * Revision 1.180  1994/11/20  14:11:56  matt
+ * Gracefully handle two hostages having same id
+ *
+ * Revision 1.179  1994/11/19  23:55:05  mike
+ * remove Assert, put in comment for Matt.
+ *
+ * Revision 1.178  1994/11/19  19:53:24  matt
+ * Added code to full support different hostage head clip & message for
+ * each hostage.
+ *
+ * Revision 1.177  1994/11/19  15:15:21  mike
+ * remove unused code and data
+ *
+ * Revision 1.176  1994/11/19  10:28:28  matt
+ * Took out write routines when editor compiled out
+ *
+ * Revision 1.175  1994/11/17  20:38:25  john
+ * Took out warning.
+ *
+ * Revision 1.174  1994/11/17  20:36:34  john
+ * Made it so that saving a mine will write the .cdl even
+ * if .lvl gets error.
+ *
+ * Revision 1.173  1994/11/17  20:26:19  john
+ * Made the game load whichever of .cdl or .lvl exists,
+ * and if they both exist, prompt the user for which one.
+ *
+ * Revision 1.172  1994/11/17  20:11:20  john
+ * Fixed warning.
+ *
+ * Revision 1.171  1994/11/17  20:09:26  john
+ * Added new compiled level format.
+ *
+ * Revision 1.170  1994/11/17  14:57:21  mike
+ * moved segment validation functions from editor to main.
+ *
+ * Revision 1.169  1994/11/17  11:39:21  matt
+ * Ripped out code to load old mines
+ *
+ * Revision 1.168  1994/11/16  11:24:53  matt
+ * Made attack-type robots have smaller radius, so they get closer to player
+ *
+ * Revision 1.167  1994/11/15  21:42:47  mike
+ * better error messages.
+ *
+ * Revision 1.166  1994/11/15  15:30:41  matt
+ * Save ptr to name of level being loaded
+ *
+ * Revision 1.165  1994/11/14  20:47:46  john
+ * Attempted to strip out all the code in the game
+ * directory that uses any ui code.
+ *
+ * Revision 1.164  1994/11/14  14:34:23  matt
+ * Fixed up handling when textures can't be found during remap
+ *
+ * Revision 1.163  1994/11/10  14:02:49  matt
+ * Hacked in support for player ships with different textures
+ *
+ * Revision 1.162  1994/11/06  14:38:17  mike
+ * Remove an apparently unnecessary mprintf.
+ *
+ * Revision 1.161  1994/10/30  14:11:28  mike
+ * ripout local segments stuff.
+ *
+ * Revision 1.160  1994/10/28  12:10:41  matt
+ * Check that was supposed to happen only when editor was in was happening
+ * only when editor was out.
+ *
+ * Revision 1.159  1994/10/27  11:25:32  matt
+ * Only do connectivity error check when editor in
+ *
+ * Revision 1.158  1994/10/27  10:54:00  matt
+ * Made connectivity error checking put up warning if errors found
+ *
+ * Revision 1.157  1994/10/25  10:50:54  matt
+ * Vulcan cannon powerups now contain ammo count
+ *
+ * Revision 1.156  1994/10/23  02:10:43  matt
+ * Got rid of obsolete hostage_info stuff
+ *
+ * Revision 1.155  1994/10/22  18:57:26  matt
+ * Added call to check_segment_connections()
+ *
+ * Revision 1.154  1994/10/21  12:19:23  matt
+ * Clear transient objects when saving (& loading) games
+ *
+ * Revision 1.153  1994/10/21  11:25:10  mike
+ * Use new constant IMMORTAL_TIME.
+ *
+ * Revision 1.152  1994/10/20  12:46:59  matt
+ * Replace old save files (MIN/SAV/HOT) with new LVL files
+ *
+ * Revision 1.151  1994/10/19  19:26:32  matt
+ * Fixed stupid bug
+ *
+ * Revision 1.150  1994/10/19  16:46:21  matt
+ * Made tmap overrides for robots remap texture numbers
+ *
+ * Revision 1.149  1994/10/18  08:50:27  yuan
+ * Fixed correct variable this time.
+ *
+ * Revision 1.148  1994/10/18  08:45:02  yuan
+ * Oops. forgot load function.
+ *
+ * Revision 1.147  1994/10/18  08:42:10  yuan
+ * Avoid the int3.
+ *
+ * Revision 1.146  1994/10/17  21:34:57  matt
+ * Added support for new Control Center/Main Reactor
+ *
+ * Revision 1.145  1994/10/15  19:06:34  mike
+ * Fix bug, maybe, having to do with something or other, ...
+ *
+ * Revision 1.144  1994/10/12  21:07:33  matt
+ * Killed unused field in object structure
+ *
+ * Revision 1.143  1994/10/06  14:52:55  mike
+ * Put check in to detect possibly bogus walls in last segment which leaked through an earlier check
+ * due to misuse of Highest_segment_index.
+ *
+ * Revision 1.142  1994/10/05  22:12:44  mike
+ * Put in cleanup for matcen/fuelcen links.
+ *
+ * Revision 1.141  1994/10/03  11:30:05  matt
+ * Make sure player in a valid segment before saving
+ *
+ * Revision 1.140  1994/09/28  11:14:41  mike
+ * Better error messaging on bogus mines: Only bring up dialog box if a "real" (level??.*) level.
+ *
+ * Revision 1.139  1994/09/28  09:22:58  mike
+ * Comment out a mprintf.
+ *
+ * Revision 1.138  1994/09/27  17:08:36  mike
+ * Message boxes when you load bogus mines.
+ *
+ * Revision 1.137  1994/09/27  15:43:45  mike
+ * Move the dump stuff to dumpmine.
+ *
+ * Revision 1.136  1994/09/27  00:02:31  mike
+ * Dump text files (".txm") when loading a mine, showing all kinds of useful mine info.
+ *
+ * Revision 1.135  1994/09/26  11:30:41  matt
+ * Took out code which loaded bogus player structure
+ *
+ * Revision 1.134  1994/09/26  11:18:44  john
+ * Fixed some conflicts with newseg.
+ *
+ * Revision 1.133  1994/09/26  10:56:58  matt
+ * Fixed inconsistancies in lifeleft for immortal objects
+ *
+ * Revision 1.132  1994/09/25  23:41:10  matt
+ * Changed the object load & save code to read/write the structure fields one
+ * at a time (rather than the whole structure at once).  This mean that the
+ * object structure can be changed without breaking the load/save functions.
+ * As a result of this change, the local_object data can be and has been
+ * incorporated into the object array.  Also, timeleft is now a property
+ * of all objects, and the object structure has been otherwise cleaned up.
  *
  */
 
@@ -24,7 +287,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #endif
 
 #ifdef RCS
-char gamesave_rcsid[] = "$Id: gamesave.c,v 1.19 2003-04-03 07:15:43 btb Exp $";
+char gamesave_rcsid[] = "$Id: gamesave.c,v 1.20 2003-06-07 20:51:13 btb Exp $";
 #endif
 
 #include <stdio.h>
